--- a/app/less/app/Content.less
+++ b/app/less/app/Content.less
@@ -1,9 +1,16 @@
 .il-content-container{
   padding-left: 0;
   padding-right: 0;
+  min-height: @il-content-min-height;
 }
 
 .il-center-content{
-    margin-left: 0;
-    margin-right: 0;
+
+}
+
+@media (max-width: @screen-sm-min) {
+  .il-sidebar-minified + .il-center-content{
+    margin-left: @il-sidebar-padding-content-sm;
+    margin-right: @il-sidebar-padding-content-sm;
+  }
 }
