--- a/app/less/app/main.less
+++ b/app/less/app/main.less
@@ -1,10 +1,18 @@
-html {
+html{
   position: relative;
   min-height: 100%;
 }
 
 body {
   /* Margin bottom by footer height */
-  padding-top: @il-header-height;
-  margin-bottom: @il-footer-height;
+  height: auto;
+
+  .ilCalcHeaderHeight();
+  padding-top: @il-header-height-small;
+  @media (min-width: @screen-sm-min) {
+    padding-top: @il-header-height-large;
+  }
+
+
+
 }
