--- a/app/less/services/Sidebars/Block/Block.less
+++ b/app/less/services/Sidebars/Block/Block.less
@@ -1,15 +1,18 @@
 
-.il-panel-sortable-toggle {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  margin-top: -8px;
-}
-
 .il-panel-sortable-placeholder {
   background: @il-panel-sortable-placeholder-panel-bg;
   border: @il-panel-sortable-placeholder-border;
   border-radius: @il-panel-sortable-placeholder-panel-border-radius;
+  margin-top: @line-height-computed;
   margin-bottom: @line-height-computed;
   height: @il-panel-sortable-placeholder-height;
 }
+
+
+
+
+
+
+
+
+
