--- a/app/less/services/Sidebars/sidebars.less
+++ b/app/less/services/Sidebars/sidebars.less
@@ -51,6 +51,10 @@
       overflow: scroll;
       margin-bottom: @grid-gutter-width/2;
       .il-sidebar-block-heading{
+        a{
+          width: 100%;
+          clear:both;
+        }
         .glyphicon{
           font-size: @il-flap-icon-font-size-lg;
         }
@@ -68,7 +72,6 @@
         font-size: @il-flap-icon-font-size-lg;
         width: @il-flap-icon-font-size-lg + 2*@padding-large-horizontal;
         overflow: hidden;
-        transition: width @il-flap-animation-speed;
 
         &:hover, .active {
           width: @il-flap-hover-size-lg;
