Changed to fixed sidebars

--- a/app/less/app/footer/footer.less
+++ b/app/less/app/footer/footer.less
@@ -1,6 +1,6 @@
 .il-footer {
-  position: absolute;
-  bottom: 0;
+  position: relative;
+
   width: 100%;
   /* Set the fixed height of the footer here */
   height: @il-footer-height;
@@ -10,5 +10,5 @@
   padding-right: @il-footer-padding-horizontal;
   padding-top: @il-footer-padding-vertical;
   padding-bottom: @il-footer-padding-vertical;
-  z-index: 1;
+  z-index: 1001;
 }
