--- a/app/less/app/header/TopBar/topbar.less
+++ b/app/less/app/header/TopBar/topbar.less
@@ -1,4 +1,11 @@
-
+.il-topbar{
+  .il-topbar-container{
+    &:extend(.container-fluid);
+  }
+  position: relative;
+  border-radius: 0;
+  margin: 0;
+}
 .il-navbar-logo{
   float: left;
   margin-right: 15px;
