--- a/app/less/app/main.less
+++ b/app/less/app/main.less
@@ -1,15 +1,6 @@
-html{
-  position: relative;
-  min-height: 100%;
+html,body{
+  height: 100%;
 }
-
 body {
-  /* Margin bottom by footer height */
-  height: auto;
-
-  .ilCalcHeaderHeight();
-  padding-top: @il-header-height-small;
-
-
-
+  min-height: 100vh;
 }
