Improved for scrollbar

--- a/app/less/app/content/sidebars/blocks/blocks.less
+++ b/app/less/app/content/sidebars/blocks/blocks.less
@@ -8,7 +8,7 @@
 
   .il-sidebar-block{
     position: relative;
-    overflow: scroll;
+    overflow-y: hidden;
     //margin-bottom: @grid-gutter-width/2;
     border-radius: 0;
     border: none;
@@ -37,6 +37,7 @@
 .il-sidebar-minified{
   .il-sidebar-block-group{
     display: none;
+    overflow-y: hidden;
   }
 }
 
