--- a/app/less/app/content/sidebars/blocks/blockToggler.less
+++ b/app/less/app/content/sidebars/blocks/blockToggler.less
@@ -4,7 +4,8 @@
   &:extend(.btn-primary all);
 
   position: absolute;
-  width: @il-sidebar-toggle-button-width;
+  padding: 0;
+  width: @padding-large-horizontal;
   height: @il-sidebar-toggle-button-height;
   border-radius: 0;
 }
@@ -23,13 +24,13 @@
   &.il-sidebar-left{
     .il-sidebar-toggle-button{
       left: auto;
-      right: -@il-sidebar-toggle-button-width;
+      right: -@padding-large-horizontal;
     }
   }
 
   &.il-sidebar-right{
     .il-sidebar-toggle-button{
-      left: -@il-sidebar-toggle-button-width;
+      left: -@padding-large-horizontal;
     }
   }
 }
@@ -37,10 +38,41 @@
 @media (min-width: @screen-sm-min) {
   .il-sidebar-toggle-button{
     display: none;
+    padding: inherit;
+    width: @il-sidebar-toggle-button-width;
+    height: @il-sidebar-toggle-button-height;
+  }
+  .il-sidebar-open{
+    &.il-sidebar-left{
+      .il-sidebar-toggle-button{
+        left: auto;
+        right: -@il-sidebar-toggle-button-width;
+      }
+    }
+
+    &.il-sidebar-right{
+      .il-sidebar-toggle-button{
+        left: -@il-sidebar-toggle-button-width;
+      }
+    }
   }
   .il-sidebar:hover{
     .il-sidebar-toggle-button{
       display: inherit;
+    }
+  }
+  .il-sidebar-minified{
+    .il-sidebar-blocks-wrapper:hover {
+      .il-sidebar-toggle-button {
+        display: none;
+      }
+    }
+  }
+  .il-sidebar-minified{
+    .il-sidebar-blocks-wrapper {
+      .il-sidebar-toggle-button:hover {
+        display: inherit;
+      }
     }
   }
 }
