--- a/app/less/app/content/sidebars/sidebars.less
+++ b/app/less/app/content/sidebars/sidebars.less
@@ -1,3 +1,11 @@
+.il-sidebar-minified{
+  .il-make-columns-sidebar-minified();
+}
+
+.il-sidebar-open{
+  .il-make-columns-sidebar-open();
+}
+
 @media (min-width: @screen-sm-min) {
   .il-sidebar{
     &.il-sidebar-left{
