--- a/app/less/app/content/content.less
+++ b/app/less/app/content/content.less
@@ -11,6 +11,6 @@
   border-bottom-width: 0;
   margin-left: 0;
   margin-right: 0;
-  background: @il-sidebar-bg-color;
+  background: @il-content-bg-color;
   overflow: auto;
 }
