--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -950,10 +950,15 @@
 
 
 @il-main-menu-background-color:	#444;//lighten(@brand-primary, 10%);
+@il-content-bg-color: @gray-light;
 
 //== ILIAS Sidebar
 @il-sidebar-padding-bottom: 15px;
-@il-sidebar-bg-color: lighten(@brand-primary, 20%);
+@il-sidebar-bg-color:  @brand-primary;
+@il-sidebar-hover-bg-color:  darken(@brand-primary,10%);
+@il-sidebar-body-bg-color:  lighten(@brand-primary,10%);
+@il-sidebar-heading-link-color: @navbar-inverse-color;
+@il-sidebar-heading-link-hover-color: @navbar-inverse-link-hover-color;
 @il-sidebar-padding-content: 50px;
 @il-sidebar-padding-content-sm: 20px;
 
