column mixin fix

--- a/app/less/mixins/content-grid.less
+++ b/app/less/mixins/content-grid.less
@@ -41,15 +41,12 @@
   width: percentage((@il-sidebar-open-xs / @grid-columns));
 
   @media (min-width: @screen-sm-min) {
-    width: percentage((@il-sidebar-open-xs / @grid-columns));
-  }
-  @media (min-width: @screen-sm-min) {
     width: percentage((@il-sidebar-open-sm / @grid-columns));
   }
-  @media (min-width: @screen-sm-min) {
+  @media (min-width: @screen-md-min) {
     width: percentage((@il-sidebar-open-md / @grid-columns));
   }
-  @media (min-width: @screen-sm-min) {
+  @media (min-width: @screen-lg-min) {
     width: percentage((@il-sidebar-open-lg / @grid-columns));
   }
 }
