major header changes

--- a/app/data/layouts/mainStructure/iliasMainStructure/iliasMainStructureEntry.html
+++ b/app/data/layouts/mainStructure/iliasMainStructure/iliasMainStructureEntry.html
@@ -1,6 +1,4 @@
-<span ng-non-bindable>
-<header>Header</header>
-<sidebar>Sidebar</sidebar>
-<content class="container">Content</content>
-<footer>Footer</footer>
-</span>
+Test
+<iframe src="/app/data/layouts/mainStructure/iliasMainStructure/pageLayout.html" width="1000px" height="500px">
+</iframe>
+test
