--- a/app/less/app/content/center/conter-center.less
+++ b/app/less/app/content/center/conter-center.less
@@ -1,3 +1,7 @@
+.uiks-iframe-container {
+  overflow: scroll !important;
+}
+
 .il-content-center{
   min-height: @il-content-min-height;
   background: white;//@il-content-bg;
