--- a/app/less/app/content/sidebars/blocks/blockToggler.less
+++ b/app/less/app/content/sidebars/blocks/blockToggler.less
@@ -36,6 +36,7 @@
 }
 
 @media (min-width: @screen-sm-min) {
+
   .il-sidebar-toggle-button{
     display: none;
     padding: inherit;
@@ -68,10 +69,10 @@
       }
     }
   }
-  .il-sidebar-minified{
+  .il-sidebar-minified:hover {
     .il-sidebar-blocks-wrapper {
-      .il-sidebar-toggle-button:hover {
-        display: inherit;
+      .il-sidebar-toggle-button{
+        display: none;//display: inherit;
       }
     }
   }
