--- a/app/less/app/header/header.less
+++ b/app/less/app/header/header.less
@@ -1,18 +1,9 @@
 .il-header{
-  position: relative;
-
-  .il-header-custom-branding{
-    padding-top: @navbar-height;
-    height: @il-header-custom-branding-height;
-    width: 100%;
-    background: @il-header-custom-branding-bg;
-  }
-
-  .il-header-fixed{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: @zindex-navbar-fixed;
-  }
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: @il-header-height;
+  color: @il-header-bg;
+  z-index: @zindex-navbar-fixed;
 }
 
